swagger docs for authorization
