# routes/authorization.js
@@ -6,6 +6,37 @@ let middleware = require('../auth/middleware');
 
 /* path /auth/ */
 
+/**
+ * @swagger
+ * /auth/login:
+ *  post:
+ *      summary: User authentication
+ *      description: 'to log in the user. NOTICE that cookies must be accepted and stored.'
+ *      tags:
+ *          - Authorizaion
+ *      produces:
+ *          - application/json
+ *      requestBody:
+ *          description: User credentials
+ *          required: true
+ *          content:
+ *              application/json:
+ *                  schema:
+ *                      $ref: '#/components/schemas/UserCredentials'
+ *      responses:
+ *          200:
+ *              description: Successfully logged in
+ *              content:
+ *                  application/json:
+ *                      schema:
+ *                          $ref: '#/components/schemas/UserWithoutPassword'
+ *          400:
+ *              description: Invalid required parameters
+ *          401:
+ *              description: Request accepted, but these credentials are invalid
+ *          500:
+ *              description: Server fails on some operation, try later
+ */
 router.post('/login', (req, res) => {
     const login = req.body.login;
     const password = req.body.password;
@@ -32,6 +63,27 @@ router.post('/login', (req, res) => {
         });
 });
 
+/**
+ * @swagger
+ * /auth/logout:
+ *  get:
+ *      summary: Log out user
+ *      description: to log out the user
+ *      tags:
+ *          - Authorizaion
+ *      security:
+ *          - BearerAuth:
+ *              - token
+ *          - OAuth2:
+ *              - default
+ *      produces:
+ *          - application/json
+ *      responses:
+ *          200:
+ *              description: Successfully logged out
+ *          401:
+ *              description: Unauthorized
+ */
 router.get('/logout', middleware.allowFor('default'), (req, res) => {
    if (req.session.user) {
        req.session.destroy();
@@ -42,6 +94,31 @@ router.get('/logout', middleware.allowFor('default'), (req, res) => {
    }
 });
 
+/**
+ * @swagger
+ * /auth/me:
+ *  get:
+ *      summary: Returns currently logged in user's information
+ *      description: Current user information
+ *      tags:
+ *          - Authorizaion
+ *      security:
+ *          - BearerAuth:
+ *              - token
+ *          - OAuth2:
+ *              - user
+ *      produces:
+ *          - application/json
+ *      responses:
+ *          200:
+ *              description: Successfully logged out
+ *              content:
+ *                  application/json:
+ *                      schema:
+ *                          $ref: '#/components/schemas/UserWithoutPassword'
+ *          401:
+ *              description: Unauthorized
+ */
 router.get('/me', middleware.allowFor('user'), (req, res) => {
     res.status(200).send(req.session.user);
 });
